# wsjtx_android

./: .gitmodules
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/vvanders/com/wsjt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/vvanders/com/wsjt/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/vvanders/com/wsjt/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
